--- a/style.css
+++ b/style.css
@@ -233,3 +233,28 @@ body {
     font-size: 18px;
   }
 }
+
+@media (500px <= width) {
+  .header-content-title {
+    font-size: 40px;
+  }
+  .header-content-description {
+    font-size: 20px;
+  }
+  .header-content-btn {
+    width: 180px;
+    height: 45px;
+  }
+  .header-content-btn a {
+    font-size: 18px;
+  }
+}
+
+@media (575px <= width) {
+  .header-content-title {
+    font-size: 45px;
+  }
+  .navigation-bar.active .navigation-circle {
+    transform: scale(53);
+  }
+}
