--- a/style.css
+++ b/style.css
@@ -189,7 +189,7 @@ body {
 
 .navigation-open .navigation-list .navigation-link {
   color: #4e4e4e;
-  font-size: 30px;
+  font-size: 25px;
   font-weight: 500;
   text-align: center;
 }
@@ -223,6 +223,64 @@ body {
 
 .header img {
   display: none;
+}
+
+.our-history {
+  text-align: center;
+  padding: 60px 25px;
+}
+
+.history-subtitle {
+  color: #eabc1c;
+  text-transform: uppercase;
+  font-size: 14px;
+  font-weight: 900;
+  letter-spacing: 3px;
+  margin-bottom: 25px;
+  display: block;
+}
+
+.history-title {
+  font-size: 32px;
+  font-weight: bold;
+  color: #ededed;
+  margin-bottom: 100px;
+}
+
+.history-box {
+  width: 100%;
+  padding: 70px 20px 40px;
+  background-color: #2d2d2d;
+  border-radius: 10px;
+  text-align: left;
+  position: relative;
+  margin-bottom: 85px;
+}
+
+.history-box h3 {
+  color: #fff;
+  margin-bottom: 18px;
+  font-size: 22px;
+  max-width: 400px;
+}
+
+.history-description {
+  color: #ededed;
+  font-size: 16px;
+  line-height: 30px;
+}
+
+.history-box-square {
+  position: absolute;
+  top: -45px;
+  left: 20px;
+  width: 90px;
+  height: 90px;
+  background-color: #ecd06d;
+  border-radius: 20px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
 
 /* Responsywność */
@@ -267,6 +325,39 @@ body {
   }
   .navigation-bar.active .navigation-circle {
     transform: scale(53);
+  }
+  .history-title {
+    font-size: 35px;
+  }
+  .history-box h3 {
+    font-size: 25px;
+  }
+  .history-description {
+    font-size: 18px;
+  }
+}
+
+@media (768px <= width) {
+  .history-box {
+    width: 48%;
+  }
+
+  .history-boxes {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-between;
+  }
+  .history-title {
+    max-width: 500px;
+    margin: 0 auto 100px;
+  }
+  .header-content-description {
+    max-width: 600px;
+    margin: 0 auto 75px;
+  }
+  .header-content-title {
+    max-width: 500px;
+    margin: 0 auto 35px;
   }
 }
 
