--- a/style.css
+++ b/style.css
@@ -113,7 +113,8 @@ body {
   text-align: center;
 }
 
-.header-content-title {
+.header-content-title,
+.shop-title {
   color: #fff;
   font-size: 26px;
   font-weight: bold;
@@ -240,7 +241,8 @@ body {
 }
 
 .history-subtitle,
-.costs-subtitle {
+.costs-subtitle,
+.shop-subtitlte {
   color: #eabc1c;
   text-transform: uppercase;
   font-size: 14px;
@@ -252,7 +254,8 @@ body {
 }
 
 .history-title,
-.costs-title {
+.costs-title,
+.shop-title {
   font-size: 32px;
   font-weight: bold;
   color: #ededed;
@@ -334,7 +337,8 @@ body {
   background-color: #2d2d2d;
   padding: 60px 25px 0px;
 }
-.costs-title {
+.costs-title,
+.shop-title {
   margin-bottom: 85px;
 }
 
@@ -424,6 +428,65 @@ body {
   color: #ededed;
   font-size: 13px;
   margin-bottom: 0;
+}
+
+.shop {
+  padding: 64px 25px 80px;
+}
+
+.shop-title {
+  margin-bottom: 25px;
+}
+
+.shop-description {
+  color: #ededed;
+  font-weight: 300;
+  font-size: 16px;
+  text-align: center;
+  line-height: 32px;
+  margin-bottom: 50px;
+}
+
+.shop-description-mobile {
+  margin-top: 50px;
+}
+
+.shop-description-desktop,
+.go-to-shop-desktop {
+  display: none;
+}
+
+.shop img {
+  width: 100%;
+}
+
+.shop button,
+.go-to-shop-desktop {
+  width: 200px;
+  height: 50px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  text-align: center;
+  display: block;
+  margin: 60px auto 0;
+  background-color: #ddbc4a;
+  border-radius: 20px;
+  border: none;
+}
+
+.shop button a,
+.go-to-shop-desktop {
+  color: #343434;
+  font-size: 16px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  gap: 10px;
+}
+
+.go-to-shop-desktop {
+  display: none;
 }
 
 /* Responsywność */
@@ -573,7 +636,8 @@ body {
     align-items: center;
   }
   .history-subtitle,
-  .costs-subtitle {
+  .costs-subtitle,
+  .shop-subtitlte {
     text-align: left;
   }
   .history-title,
@@ -592,7 +656,47 @@ body {
   }
 
   .costs {
-    padding: 30px 50px 0;
+    padding: 30px 50px 80px;
+  }
+  .shop-title {
+    margin-bottom: 25px;
+    text-align: left;
+    font-size: 35px;
+    max-width: 500px;
+  }
+  .shop-description {
+    text-align: left;
+  }
+
+  .shop {
+    padding: 80px 50px 80px;
+  }
+
+  .shop-img-container {
+    display: flex;
+    justify-content: space-between;
+  }
+
+  .shop img {
+    width: 48%;
+  }
+
+  .shop-description-mobile {
+    display: none;
+  }
+  .shop button {
+    margin: 60px 0 0;
+  }
+
+  .first-shop-img {
+    margin-right: 30px;
+  }
+  .go-to-shop-desktop {
+    transition: all 0.3s;
+  }
+  .go-to-shop-desktop:hover {
+    background-color: #ededed;
+    color: #353535;
   }
 }
 
@@ -715,7 +819,8 @@ body {
   .history-description {
     font-size: 20px;
   }
-  .history-subtitle {
+  .history-subtitle,
+  .shop-subtitlte {
     font-size: 20px;
   }
   .history-box-square {
@@ -766,6 +871,41 @@ body {
   .costs-description {
     font-size: 18px;
   }
+  .go-to-shop-desktop {
+    display: flex;
+    margin-left: 0;
+  }
+  .shop .shop-btn-mobile {
+    display: none;
+  }
+  .shop-columns {
+    display: flex;
+    justify-content: space-between;
+  }
+  .shop-img-container {
+    flex-direction: column;
+    justify-content: center;
+  }
+  .shop-description {
+    max-width: 700px;
+    margin-bottom: 20px;
+  }
+  .shop-description-desktop {
+    display: block;
+  }
+  .shop img {
+    width: 80%;
+  }
+  .shop-title {
+    font-size: 50px;
+  }
+  .first-shop-img {
+    margin-right: 0;
+  }
+  .shop-img-container {
+    align-items: flex-end;
+    gap: 30px;
+  }
 }
 
 @media (1350px <= width) {
@@ -795,6 +935,18 @@ body {
   .costs-box {
     max-width: 550px;
   }
+  .shop img {
+    width: 100%;
+  }
+
+  .shop-left-side {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+  }
+  .shop-title {
+    max-width: 800px;
+  }
 }
 
 @media (1920px <= width) {
@@ -813,5 +965,25 @@ body {
   .header .nav-logo {
     top: -80px;
     left: 25px;
+  }
+  .history-title,
+  .costs-title,
+  .shop-title {
+    font-size: 55px;
+  }
+
+  .shop-img-container {
+    margin-right: 100px;
+  }
+  .go-to-shop-desktop {
+    font-size: 20px;
+    width: 220px;
+    height: 50px;
+    margin-top: 40px;
+  }
+
+  .shop-description {
+    font-size: 18px;
+    line-height: 35px;
   }
 }
