added footer on mobile

--- a/style.css
+++ b/style.css
@@ -489,6 +489,62 @@ body {
   display: none;
 }
 
+.footer {
+  background-color: #2d2d2d;
+  width: 100%;
+  padding: 70px 25px 20px;
+}
+
+.footer .hours {
+  margin-bottom: 50px;
+}
+
+.footer .hours h3,
+.footer .contact h3 {
+  color: #ddbc4a;
+  font-size: 24px;
+  font-weight: bold;
+  margin-bottom: 30px;
+}
+
+.footer .hours span {
+  color: #fff;
+  font-size: 17px;
+  font-weight: 400;
+  display: block;
+  margin-bottom: 10px;
+}
+
+.contact-item {
+  display: flex;
+  gap: 15px;
+  margin-bottom: 20px;
+}
+
+.footer .contact-item a {
+  font-weight: 300;
+  color: #fff;
+}
+
+.map {
+  margin-bottom: 30px;
+}
+
+.footer .contact {
+  margin-bottom: 50px;
+}
+
+iframe {
+  width: 100%;
+  border-radius: 10px;
+  height: 200px;
+}
+
+.copyright p {
+  color: #a9a9a9;
+  font-weight: 300;
+  font-size: 16px;
+}
 /* Responsywność */
 
 @media (375px <= width) {
