--- a/style.css
+++ b/style.css
@@ -160,7 +160,7 @@ body {
   width: 100%;
   height: 100%;
   border-radius: 50%;
-  transition: all 0.8s cubic-bezier(0.44, 0.13, 0.46, 0.86);
+  transition: all 0.6s cubic-bezier(0.44, 0.13, 0.46, 0.86);
   z-index: 90;
   transform: scale(0);
 }
@@ -608,6 +608,12 @@ iframe {
 
 .slide-1 {
   margin-bottom: 150px;
+}
+
+.header-content-btn a {
+  height: 100%;
+  display: flex;
+  align-items: center;
 }
 
 /* Responsywność */
